--- a/PalmRent.IService/PalmRent.IService.csproj
+++ b/PalmRent.IService/PalmRent.IService.csproj
@@ -42,7 +42,11 @@
   <ItemGroup>
     <Compile Include="IAdminLogService.cs" />
     <Compile Include="IAdminUserService.cs" />
+    <Compile Include="IAttachmentService.cs" />
     <Compile Include="ICityService.cs" />
+    <Compile Include="ICommunityService.cs" />
+    <Compile Include="IHouseAppointmentService.cs" />
+    <Compile Include="IHouseService.cs" />
     <Compile Include="IServiceSupport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
