--- a/PalmRent.Service/PalmRent.Service.csproj
+++ b/PalmRent.Service/PalmRent.Service.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Entities\UserEntity.cs" />
     <Compile Include="HouseAppointmentService.cs" />
     <Compile Include="HouseService.cs" />
+    <Compile Include="IdNameService.cs" />
     <Compile Include="ModelConfig\AdminLogConfig.cs" />
     <Compile Include="ModelConfig\AdminUserConfig.cs" />
     <Compile Include="ModelConfig\AttachmentConfig.cs" />
@@ -89,7 +90,11 @@
     <Compile Include="ModelConfig\SettingConfig.cs" />
     <Compile Include="ModelConfig\UserConfig.cs" />
     <Compile Include="PalmRentDbContext.cs" />
+    <Compile Include="PermissionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleService.cs" />
+    <Compile Include="SettingService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
