--- a/PalmRent.FrontWeb/PalmRent.FrontWeb.csproj
+++ b/PalmRent.FrontWeb/PalmRent.FrontWeb.csproj
@@ -135,6 +135,18 @@
     <Folder Include="Views\Main\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PalmRent.CommonMVC\PalmRent.CommonMVC.csproj">
+      <Project>{0ed11b80-7812-47dd-8367-e5229e3db902}</Project>
+      <Name>PalmRent.CommonMVC</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PalmRent.Common\PalmRent.Common.csproj">
+      <Project>{6fa38be1-d789-4aa2-935a-9d88f17b66ef}</Project>
+      <Name>PalmRent.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PalmRent.DTO\PalmRent.DTO.csproj">
+      <Project>{20386acc-e83d-4d11-93db-6d44144af8dc}</Project>
+      <Name>PalmRent.DTO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PalmRent.IService\PalmRent.IService.csproj">
       <Project>{00b48abb-d40e-4e3c-8f1d-47cd5b264ef2}</Project>
       <Name>PalmRent.IService</Name>
