--- a/PalmRent.AdminWeb/PalmRent.AdminWeb.csproj
+++ b/PalmRent.AdminWeb/PalmRent.AdminWeb.csproj
@@ -1361,6 +1361,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\CheckPermissionAttribute.cs" />
+    <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\PalmRentAuthorizeFilter.cs" />
     <Compile Include="App_Start\PalmRentExceptionFilter.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminUserController.cs" />
