--- a/PalmRent.AdminWeb/PalmRent.AdminWeb.csproj
+++ b/PalmRent.AdminWeb/PalmRent.AdminWeb.csproj
@@ -1361,12 +1361,14 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminHelper.cs" />
     <Compile Include="App_Start\CheckPermissionAttribute.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\PalmRentAuthorizeFilter.cs" />
     <Compile Include="App_Start\PalmRentExceptionFilter.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminUserController.cs" />
+    <Compile Include="Controllers\HouseController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\PermissionController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
@@ -1385,6 +1387,11 @@
     <Compile Include="Models\AdminUserAddViewModel.cs" />
     <Compile Include="Models\AdminUserEditModel.cs" />
     <Compile Include="Models\AdminUserEditViewModel.cs" />
+    <Compile Include="Models\HouseAddModel.cs" />
+    <Compile Include="Models\HouseAddViewModel.cs" />
+    <Compile Include="Models\HouseEditModel.cs" />
+    <Compile Include="Models\HouseEditViewModel.cs" />
+    <Compile Include="Models\HouseIndexViewModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\PermissionAddNewModel.cs" />
     <Compile Include="Models\PermissionEditModel.cs" />
@@ -1497,6 +1504,9 @@
     <Content Include="Views\AdminUser\List.cshtml" />
     <Content Include="Views\AdminUser\Add.cshtml" />
     <Content Include="Views\AdminUser\Edit.cshtml" />
+    <Content Include="Views\House\List.cshtml" />
+    <Content Include="Views\House\Add.cshtml" />
+    <Content Include="Views\House\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
