--- a/PalmRent.IService/PalmRent.IService.csproj
+++ b/PalmRent.IService/PalmRent.IService.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IHouseService.cs" />
     <Compile Include="IIdNameService.cs" />
     <Compile Include="IPermissionService.cs" />
+    <Compile Include="IRegionService.cs" />
     <Compile Include="IRoleService.cs" />
     <Compile Include="IServiceSupport.cs" />
     <Compile Include="ISettingService.cs" />
