--- a/PalmRent.Service/PalmRent.Service.csproj
+++ b/PalmRent.Service/PalmRent.Service.csproj
@@ -92,6 +92,7 @@
     <Compile Include="PalmRentDbContext.cs" />
     <Compile Include="PermissionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionService.cs" />
     <Compile Include="RoleService.cs" />
     <Compile Include="SettingService.cs" />
     <Compile Include="UserService.cs" />
