--- a/PalmRent.AdminWeb/packages.config
+++ b/PalmRent.AdminWeb/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="4.0.1" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net46" />
   <package id="CaptchaGen" version="1.0.0" targetFramework="net46" />
+  <package id="CodeCarvings.Piczard" version="1.2.3.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
