--- a/PalmRent.AdminWeb/PalmRent.AdminWeb.csproj
+++ b/PalmRent.AdminWeb/PalmRent.AdminWeb.csproj
@@ -1512,6 +1512,7 @@
     <Content Include="Views\House\Add.cshtml" />
     <Content Include="Views\House\Edit.cshtml" />
     <Content Include="Views\House\PicUpload.cshtml" />
+    <Content Include="Views\House\PicList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
