--- a/PalmRent.AngularJsTest/packages.config
+++ b/PalmRent.AngularJsTest/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.7.2" targetFramework="net46" />
+  <package id="jQuery" version="3.3.1" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
 </packages>
