--- a/PalmRent.FrontWeb/PalmRent.FrontWeb.csproj
+++ b/PalmRent.FrontWeb/PalmRent.FrontWeb.csproj
@@ -217,6 +217,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Main\Index.cshtml" />
+    <Content Include="Views\Main\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
