'更新房屋条件搜索'

--- a/PalmRent.AngularJsTest/PalmRent.AngularJsTest.csproj
+++ b/PalmRent.AngularJsTest/PalmRent.AngularJsTest.csproj
@@ -76,11 +76,18 @@
     <Content Include="AngularJs--大小写转换与对象深拷贝.html" />
     <Content Include="AngularJs--对象扩充与数据遍历.html" />
     <Content Include="AngularJs--操作CheckBox复选框.html" />
+    <Content Include="callee与过滤器结合制作表格升降排序实例.html" />
+    <Content Include="filter变量调节器分析与货币变量调节器处理.html" />
     <Content Include="Handler1.ashx" />
     <Content Include="Handler2.ashx" />
+    <Content Include="lowercase与uppercase过滤器使用.html" />
     <Content Include="ng-model-options设置数据同步时机提交网站性能.html" />
+    <Content Include="orderBy数据排序与filter筛选过滤器.html" />
     <Content Include="事件处理指令讲解.html" />
+    <Content Include="使用date过滤器处理时间.html" />
+    <Content Include="使用limitTo过滤器截取字符.html" />
     <Content Include="使用ng-style动态改变样式.html" />
+    <Content Include="控制器中如何使用过虑器服务.html" />
     <Content Include="简单实现表单的全选与反选.html" />
     <Content Include="通过ng-class动态改变样式类实例操作\1.html" />
     <Content Include="通过ng-class动态改变样式类实例操作\2.html" />
