--- a/PalmRent.AngularJsTest/PalmRent.AngularJsTest.csproj
+++ b/PalmRent.AngularJsTest/PalmRent.AngularJsTest.csproj
@@ -78,23 +78,28 @@
     <Content Include="AngularJs--对象扩充与数据遍历.html" />
     <Content Include="AngularJs--操作CheckBox复选框.html" />
     <Content Include="callee与过滤器结合制作表格升降排序实例.html" />
+    <Content Include="controller控制器scope父子集作用域实例讲解一+.html" />
+    <Content Include="controller控制器scope父子集作用域实例讲解二.html" />
     <Content Include="filter变量调节器分析与货币变量调节器处理.html" />
     <Content Include="Handler1.ashx" />
     <Content Include="Handler2.ashx" />
     <Content Include="lowercase与uppercase过滤器使用.html" />
     <Content Include="ng-model-options设置数据同步时机提交网站性能.html" />
     <Content Include="orderBy数据排序与filter筛选过滤器.html" />
+    <Content Include="view\hdcms.html" />
     <Content Include="事件处理指令讲解.html" />
     <Content Include="使用%24scope处理升降序.html" />
     <Content Include="使用%24watch与%24filter过滤器制作数据筛选实例.html" />
     <Content Include="使用date过滤器处理时间.html" />
     <Content Include="使用limitTo过滤器截取字符.html" />
     <Content Include="使用ng-style动态改变样式.html" />
+    <Content Include="指令scope作用域分析一.html" />
     <Content Include="控制器中如何使用过虑器服务.html" />
     <Content Include="简单实现表单的全选与反选.html" />
     <Content Include="自定义指令directive的restrict属性说明.html" />
     <Content Include="自定义指令replace属性详解.html" />
     <Content Include="自定义指令template函数式操作实例讲解.html" />
+    <Content Include="自定义指令transclude与templateUrl属性详解.html" />
     <Content Include="自定义指令名称的标准规范.html" />
     <Content Include="自定义过滤器之手机加星过滤器实例.html" />
     <Content Include="通过ng-class动态改变样式类实例操作\1.html" />
