--- a/PalmRent.AngularJsTest/PalmRent.AngularJsTest.csproj
+++ b/PalmRent.AngularJsTest/PalmRent.AngularJsTest.csproj
@@ -80,12 +80,17 @@
     <Content Include="callee与过滤器结合制作表格升降排序实例.html" />
     <Content Include="controller控制器scope父子集作用域实例讲解一+.html" />
     <Content Include="controller控制器scope父子集作用域实例讲解二.html" />
+    <Content Include="directive的link属性详解\1.html" />
+    <Content Include="directive的link属性详解\home.html" />
     <Content Include="filter变量调节器分析与货币变量调节器处理.html" />
     <Content Include="Handler1.ashx" />
     <Content Include="Handler2.ashx" />
     <Content Include="lowercase与uppercase过滤器使用.html" />
     <Content Include="ng-model-options设置数据同步时机提交网站性能.html" />
     <Content Include="orderBy数据排序与filter筛选过滤器.html" />
+    <Content Include="scope隔离作用域之%40单向文本绑定.html" />
+    <Content Include="scope隔离作用域之=&amp;调用父作用域中函数.html" />
+    <Content Include="scope隔离作用域之=双向文本绑定.html" />
     <Content Include="view\hdcms.html" />
     <Content Include="事件处理指令讲解.html" />
     <Content Include="使用%24scope处理升降序.html" />
@@ -93,6 +98,7 @@
     <Content Include="使用date过滤器处理时间.html" />
     <Content Include="使用limitTo过滤器截取字符.html" />
     <Content Include="使用ng-style动态改变样式.html" />
+    <Content Include="指令directive的controller属性\1.html" />
     <Content Include="指令scope作用域分析一.html" />
     <Content Include="控制器中如何使用过虑器服务.html" />
     <Content Include="简单实现表单的全选与反选.html" />
