--- a/PalmRent.AdoDnet/PalmRent.AdoDnet.csproj
+++ b/PalmRent.AdoDnet/PalmRent.AdoDnet.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ado.net基本增删改查" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -76,9 +77,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="sa账号启用.txt" />
+    <Content Include="SqlDataReader使用.png" />
     <Content Include="Web.config" />
     <Content Include="数据类型.txt" />
     <Content Include="通过代码创建数据库和表.txt" />
+    <Content Include="通过调用ExecuteReader方法获取多行多列数据.txt" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
