--- a/PalmRent.AdoDnet/PalmRent.AdoDnet.csproj
+++ b/PalmRent.AdoDnet/PalmRent.AdoDnet.csproj
@@ -78,10 +78,15 @@
   <ItemGroup>
     <Content Include="sa账号启用.txt" />
     <Content Include="SqlCommand增删改查2.txt" />
+    <Content Include="SqlDataAdapter使用.txt" />
     <Content Include="SqlDataReader使用.png" />
+    <Content Include="SqlHelper.txt" />
+    <Content Include="SqlHelper原始.txt" />
     <Content Include="Web.config" />
     <Content Include="带参数的sql语句.txt" />
     <Content Include="数据类型.txt" />
+    <Content Include="自己创建一个Dataset和DataTable.txt" />
+    <Content Include="连接池.txt" />
     <Content Include="通过代码创建数据库和表.txt" />
     <Content Include="通过调用ExecuteReader方法获取多行多列数据.txt" />
   </ItemGroup>
